--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,7 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  url: <%=ENV["DATABASE_URL"]%>
-  database: railwayapp_production
-  username: railwayapp
-  password: <%=["RAILWAYAPP_DATABASE_PASSWORD"]%>
+   <<: *default
+  database: mysite_production
+  username: mysite
+  password: <%= ENV['MYSITE_DATABASE_PASSWORD'] %>
